--- a/package.json
+++ b/package.json
@@ -1,19 +1,5 @@
 {
-  "name": "portfolio-v0",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.2",
-    "hogan-express": "^0.5.2",
-    "hogan-middleware": "^0.2.2",
-    "nodemon": "^3.1.9"
+    "dotenv": "^16.4.7"
   }
 }
