--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,17 @@
     "@apollo/client": "^3.13.5",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.8.4",
+    "formik": "^2.4.6",
     "graphql": "^16.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.5",
     "remark-gfm": "^4.0.1",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
