--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "formik": "^2.4.6",
     "graphql": "^16.10.0",
+    "motion": "^12.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
