--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.5",
     "remark-gfm": "^4.0.1",
+    "sweetalert2": "^11.19.1",
     "tailwindcss": "^4.0.6",
     "yup": "^1.6.1"
   },
