--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.19.1",
     "tailwindcss": "^4.0.6",
