--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "react-to-print": "^3.1.1"
   },
   "devDependencies": {
     "@types/react-google-recaptcha": "^2.1.9"
