--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
@@ -33,6 +34,7 @@
     "@types/firebase": "^2.4.32",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
